--- a/WebBlog/Areas/Admin/Views/Categories/Create.cshtml
+++ b/WebBlog/Areas/Admin/Views/Categories/Create.cshtml
@@ -1,90 +1,101 @@
 ﻿@model WebBlog.Models.Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create New Categories";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Create</h1>
+        <div class="slim-pageheader">
+            <ol class="breadcrumb slim-breadcrumb">
+                <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Categories" asp-action="Index">Categories List</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Create New Categories</li>
+            </ol>
+            <h6 class="slim-pagetitle">Create New Categories</h6>
+        </div><!-- slim-pageheader -->
+        
+        <div class="section-wrapper">
+            <div class="form-layout">
+                <form asp-area="Admin" asp-controller="Categories" asp-action="Create" method="post" enctype="multipart/form-data"> 
+            
+                        <div class="row mg-b-25">
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label class="form-control-label">Category name: <span class="tx-danger">*</span></label>
+                                <input class="form-control" type="text" asp-for="CatName">
+                            </div>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CatName" class="control-label"></label>
-                <input asp-for="CatName" class="form-control" />
-                <span asp-validation-for="CatName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Alias" class="control-label"></label>
-                <input asp-for="Alias" class="form-control" />
-                <span asp-validation-for="Alias" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MetaDesc" class="control-label"></label>
-                <input asp-for="MetaDesc" class="form-control" />
-                <span asp-validation-for="MetaDesc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MetaKey" class="control-label"></label>
-                <input asp-for="MetaKey" class="form-control" />
-                <span asp-validation-for="MetaKey" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Thumb" class="control-label"></label>
-                <input asp-for="Thumb" class="form-control" />
-                <span asp-validation-for="Thumb" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Published" /> @Html.DisplayNameFor(model => model.Published)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Ordering" class="control-label"></label>
-                <input asp-for="Ordering" class="form-control" />
-                <span asp-validation-for="Ordering" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Parents" class="control-label"></label>
-                <input asp-for="Parents" class="form-control" />
-                <span asp-validation-for="Parents" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Levels" class="control-label"></label>
-                <input asp-for="Levels" class="form-control" />
-                <span asp-validation-for="Levels" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Icon" class="control-label"></label>
-                <input asp-for="Icon" class="form-control" />
-                <span asp-validation-for="Icon" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cover" class="control-label"></label>
-                <input asp-for="Cover" class="form-control" />
-                <span asp-validation-for="Cover" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-</div>
-
+                        </div><!-- col-6 -->
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label class="form-control-label">Original Category: <span class="tx-danger">*</span></label>
+                                <select class="form-control select2-bd-0" asp-for="Parents" asp-items="@ViewBag.DanhmucGoc" required>
+                                    <option value="0" selected>Original Category</option>
+                                </select>
+                            </div>
+                        </div><!-- col-4 -->
+                        <div class="col-lg-4">
+                        <div class="form-group">
+                            <label class="form-control-label">Sort: <span class="tx-danger">*</span></label>
+                            <input class="form-control" type="text" asp-for="Ordering" />
+                        </div>
+                        </div><!-- col-6 -->
+                        <div class="col-lg-12">
+                                <div class="form-group mg-b-10-force">
+                                    <label class="form-control-label">Description: <span class="tx-danger">*</span></label>
+                                    <input class="form-control" type="text" asp-for="Description" />
+                                </div>
+                         </div><!-- col-12 -->
+                            <div class="col-lg-6">
+                                <div class="form-group mg-b-10-force">
+                                    <label class="form-control-label">Avatar: <span class="tx-danger">*</span></label>
+                                    <input class="fThumb" type="file"  class="form-control-file" asp-for="Thumb"/>
+                                </div>
+                            </div><!-- col-6 -->
+                            <div class="col-lg-6">
+                                <div class="form-group mg-b-10-force">
+                                    <label class="form-control-label">Cover: <span class="tx-danger">*</span></label>
+                                    <input class="fCover" type="file" class="form-control-file" asp-for="Cover" />
+                                </div>
+                            </div><!-- col-6 -->
+                            <div class="col-lg-6">
+                                <div class="form-group mg-b-10-force">
+                                    <label class="form-control-label">Icon: <span class="tx-danger">*</span></label>
+                                    <input class="fIcon" type="file" class="form-control-file" asp-for="Icon" />
+                                </div>
+                            </div><!-- col-6 -->
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                            
+                                        <br />
+                                    <input class="check-box"  asp-for="Published"><span>Active</span>
+                                </div>
+                            </div><!-- col-4 -->
+                            <hr/>
+                                <div class="col-lg-12">
+                                <div class="form-group mg-b-10-force">
+                                    <label class="form-control-label">Title: <span class="tx-danger">*</span></label>
+                                    <input class="form-control" type="text" asp-for="Title" />
+                                </div>
+                                </div><!-- col-12 -->
+                                <div class="col-lg-12">
+                                    <div class="form-group mg-b-10-force">
+                                        <label class="form-control-label">MetaKey: <span class="tx-danger">*</span></label>
+                                        <input class="form-control" type="text" asp-for="MetaKey" />
+                                        </div>
+                                    </div><!-- col-12 -->
+                            <div class="col-lg-12">
+                                <div class="form-group mg-b-10-force">
+                                    <label class="form-control-label">Meta Desc: <span class="tx-danger">*</span></label>
+                                    <input class="form-control" type="text" asp-for="MetaDesc" />
+                                    </div>
+                            </div><!-- col-12 -->
+                        </div><!--row-->
+     
+                     <div class="form-layout-footer">
+                            <button class="btn btn-primary bd-0">Submit Form</button>
+                            <button class="btn btn-secondary bd-0">Cancel</button>
+                        </div><!--form-layout-footer-->
+                </form>
+            </div><!--form-layout-->
+         </div><!--section-wrapper-->
